# cytosol

./: .gitignore  Cargo.toml  README.md
.github/workflows/: cffi-nightly.yml  linux_release.yml  rust.yml
benches/: fib.rs
cytosol/: Cargo.toml
cytosol-c-ffi/: Cargo.toml  build.rs  cbindgen.toml  cytosol.h
cytosol-c-ffi/src/: lib.rs
cytosol-hir/: Cargo.toml
cytosol-hir/src/: ast_to_hir.rs  lib.rs  types.rs
cytosol-parser/: Cargo.toml
cytosol-parser/src/: lexer.rs  lib.rs  parser.rs
cytosol-runtime/: Cargo.toml
cytosol-runtime/src/: lib.rs  value.rs
cytosol-syntax/: Cargo.toml
cytosol-syntax/src/: impls.rs  lib.rs  pretty.rs  types.rs
cytosol-tester/: Cargo.toml
cytosol-tester/src/: debug.rs  driver.rs  main.rs  perf_track.rs  timing.rs
cytosol-tester/tests/: ui.rs
cytosol/src/: debug.rs  driver.rs  lib.rs  main.rs  reporting.rs  timing.rs
cytosol/tests/: ui.rs
cytosolc/: Cargo.toml
cytosolc/src/: main.rs
cytosolc/tests/: ui.rs
examples/: cascade.cyt  enzymes.cyt  hello_world.cyt  rules.cyt  when_clause.cyt
examples/c-api/: Makefile  main.c  test.cyt
tests/fail/parsing/: wrong_keyword.cyt
tests/fail/semantic/: builtin_as_product.cyt  call_duplicate_parameter.cyt  call_missing_parameter.cyt  call_unknown_parameter.cyt  duplicated_atom_field.cyt  duplicated_record_field.cyt  enzyme_name_rebound.cyt  extern_duplicate_parameter.cyt  extern_parameter_unknown_type.cyt  extern_redefined.cyt  invalid_factor_type.cyt  invalid_product_type.cyt  product_duplicate_field.cyt  product_enzyme_with_field.cyt  product_field_index_on_non_atom.cyt  product_field_index_on_non_record.cyt  product_field_type_mismatch.cyt  product_invalid_field_access.cyt  product_missing_field.cyt  product_type_mismatch_infix_op.cyt  product_type_mismatch_prefix_op_field.cyt  product_type_mismatch_prefix_op_literal.cyt  product_undefined_variable.cyt  product_unknown_field.cyt  recursive_atom.cyt  recursive_record.cyt  redefined_atom.cyt  redefined_builtin_type.cyt  redefined_record.cyt  unknown_extern.cyt  unknown_type_atom_field.cyt  unknown_type_record_field.cyt
tests/pass/lexing/: hello_world.cyt
tests/pass/parsing/: atoms.cyt  call.cyt  enzymes.cyt  express.cyt  externs.cyt  gene_with_factors_no_body.cyt  hello_world.cyt  rules.cyt  when_clauses.cyt
tests/pass/semantic/: addition.cyt  atom_definition_order_irrelevant.cyt  atom_with_enzyme_field.cyt  greeting.cyt  hello_world.cyt  when_clause.cyt
