[package]
name = "cytosol-c-ffi"
version = "0.1.0"
authors = ["tiatomee <tia-github@poto.cafe>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
crate-type = ["cdylib", "staticlib"]

[dependencies]
cytosol = { path = "../cytosol" }
id-arena = "2.2.1"

[build-dependencies]
cbindgen = { version = "0.17.0", default-features = false }