[package]
name = "cytosol-hir"
version = "0.1.0"
authors = ["tiatomee <tia-github@poto.cafe>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
cytosol-syntax = { path = "../cytosol-syntax" }
id-arena = "2"
thiserror = "1"
petgraph = "0.5"