[package]
name = "cytosol-parser"
version = "0.1.0"
authors = ["hue"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
cytosol-syntax = { path = "../cytosol-syntax" }
logos = "0.11"
thiserror = "1"

[dev-dependencies]
codespan-reporting = "0.11"