[package]
name = "cytosol-tester"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
cytosol = { path = "../cytosol" }
clap = { version = "3.0", features = ["derive"] }
humantime = "2"
pretty = "0.10"
stats_alloc = "0.1"
humansize = "1"
comfy-table = "1"


[dev-dependencies]
goldentests = "0.3.7"