[package]
name = "cytosol"
version = "0.1.0"
authors = ["tiatomee <tia-github@poto.cafe>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
cytosol-syntax = { path = "../cytosol-syntax", features = ["pretty"] }
cytosol-parser = { path = "../cytosol-parser" }
cytosol-hir = { path = "../cytosol-hir" }
clap = "3.0.0-beta.2"
codespan-reporting = "0.11"

[dev-dependencies]
goldentests = "0.3.7"