[package]
name = "cytosol"
version = "0.1.0"
authors = ["tiatomee <tia-github@poto.cafe>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
cytosol-syntax = { path = "../cytosol-syntax" }
cytosol-parser = { path = "../cytosol-parser" }
cytosol-hir = { path = "../cytosol-hir" }
codespan-reporting = "0.11"
humantime = "2"
pretty = "0.10"