[package]
name = "cytosolc"
version = "0.1.0"
authors = ["tiatomee <tia-github@poto.cafe>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
cytosol = { path = "../cytosol" }
clap = "3.0.0-beta.2"

[dev-dependencies]
goldentests = "0.3.7"